@@ -1,3 +1,10 @@
+2008-01-24  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	PR libfortran/34876
+	* io/transfer.c (write_buf): Handle case of zero sized array.
+	(transfer_array): Set data pointer to NULL and size to zero.  Then
+	make a data transfer and return.
+	
 2008-01-24  David Edelsohn  <edelsohn@gnu.org>
 
 	* configure: Regenerate.
